Redesign UI and harden automation service